# MultiModal-Coherence-Evaluation-and-Generation

./: .env.example  .gitignore  ANALYSIS_REPORT.md  HOW_TO_FIX.md  IMPLEMENTATION_PLAN.md  INSTALL.md  README.md  prompts.json  pyproject.toml  requirements.txt
app/: dashboard.py  demo_app.py  human_eval_app.py
artifacts/: coherence_stats.json  dataset_summary.json  failure_analysis.json  thresholds_frozen.json  unified_batch_report.json
docs/: LIMITATIONS.md  RESULTS.md  ROADMAP.md  execution_plan.md  results_summary.md
experimental/: README.md
figures/: statistical_supplement.txt
notebooks/: train_projections.ipynb
paper/: paper.md
scripts/: README.md  analyze_controlled_experiment.py  analyze_failure_modes.py  analyze_human_eval.py  analyze_laion_failures.py  analyze_results.py  analyze_retrieval_bottleneck.py  analyze_rq3.py  analyze_unified_batch.py  apply_fixes_and_test.py  audioset_to_soundscape_text.py  batch_run_phase2.py  build_audiocaps_subset.py  build_embedding_indexes.py  build_freesound_dataset.py  build_gold_pilot.py  build_laion_subset.py  build_wikimedia_dataset.py  calibrate_metrics.py  check_optimizations.py  diagnose_retrieval.py  evaluate_with_bridge.py  fit_coherence_stats.py  generate_paper_figures.py  list_gemini_models.py  prompts_batch.json  regenerate_rq3_audio.py  run_ablation_study.py  run_controlled_experiment.py  run_dataset_eval.py  run_full_experiment.py  run_human_eval.py  run_laion_eval.py  run_perturbation.py  run_phase2_v1.py  run_rq1.py  run_rq1_hybrid.py  run_rq2.py  run_rq2_hybrid.py  run_unified.py  (+12 more)
(+133 files in other folders)
