[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "multimodal-coherence-ai"
version = "0.1.0"
description = "Multimodal coherence evaluation and generation framework"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "numpy>=2.0",
    "scipy>=1.10",
    "torch>=2.0",
    "torchaudio>=2.0",
    "torchvision>=0.15",
    "transformers>=4.30",
    "pillow>=10.0",
    "soundfile>=0.12",
    "librosa>=0.10",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
eval = [
    "streamlit>=1.30",
]
diffusion = [
    "diffusers>=0.25",
    "accelerate>=1.0",
]

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
